[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mb"
authors = [
  { name = "MirrorBrain project", email = "info@mirrorbrain.org" },
  { name = "Kiwix", email = "dev@kiwix.org" },
]
requires-python = ">=3.11"
description = "mb, a tool to maintain the MirrorBrain database"
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
dependencies = [
  "cmdln==2.0.0",
  "SQLObject==3.10.2",      # was SQLObject 3.7.0
  "psycopg2-binary==2.9.9", # was psycopg2 2.7.7
  "geoip2==4.7.0",
]
dynamic = ["version"]

[project.optional-dependencies]
scripts = ["invoke==2.2.0"]
lint = ["black==23.9.1", "ruff==0.0.292"]
check = ["pyright==1.1.331"]
test = ["pytest==7.4.2", "coverage==7.3.2"]
dev = [
  "pre-commit==3.4.0",
  "debugpy==1.8.0",
  "mb[scripts]",
  "mb[lint]",
  "mb[test]",
  "mb[check]",
]

[project.urls]
Homepage = "https://github.com/benoit74/mirrorbrain"
Donate = "https://www.kiwix.org/en/support-us/"

[project.scripts]
mb = "mb.mb:main"

[tool.hatch.version]
path = "mb/__about__.py"

[tool.hatch.build]
exclude = ["/.github"]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.test]
features = ["scripts", "test"]

[tool.hatch.envs.test.scripts]
run = "inv test --args '{args}'"
run-cov = "inv test-cov --args '{args}'"
report-cov = "inv report-cov"
coverage = "inv coverage --args '{args}'"
html = "inv coverage --html --args '{args}'"

[tool.hatch.envs.lint]
template = "lint"
python = "py311"
skip-install = false
features = ["scripts", "lint"]

[tool.hatch.envs.lint.scripts]
black = "inv lint-black --args '{args}'"
ruff = "inv lint-ruff --args '{args}'"
all = "inv lintall --args '{args}'"
fix-black = "inv fix-black --args '{args}'"
fix-ruff = "inv fix-ruff --args '{args}'"
fixall = "inv fixall --args '{args}'"

[tool.hatch.envs.check]
features = ["scripts", "check"]

[tool.hatch.envs.check.scripts]
pyright = "inv check-pyright --args '{args}'"
all = "inv checkall --args '{args}'"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]
select = [
  "A", # flake8-builtins
  # "ANN",  # flake8-annotations
  "ARG", # flake8-unused-arguments
  # "ASYNC",  # flake8-async
  "B", # flake8-bugbear
  # "BLE",  # flake8-blind-except
  "C4",  # flake8-comprehensions
  "C90", # mccabe
  # "COM",  # flake8-commas
  # "D",  # pydocstyle
  # "DJ",  # flake8-django
  "DTZ", # flake8-datetimez
  "E",   # pycodestyle (default)
  "EM",  # flake8-errmsg
  # "ERA",  # eradicate
  # "EXE",  # flake8-executable
  "F", # Pyflakes (default)
  # "FA",  # flake8-future-annotations
  "FBT", # flake8-boolean-trap
  # "FLY",  # flynt
  # "G",  # flake8-logging-format
  "I",   # isort
  "ICN", # flake8-import-conventions
  # "INP",  # flake8-no-pep420
  # "INT",  # flake8-gettext
  "ISC", # flake8-implicit-str-concat
  "N",   # pep8-naming
  # "NPY",  # NumPy-specific rules
  # "PD",  # pandas-vet
  # "PGH",  # pygrep-hooks
  # "PIE",  # flake8-pie
  # "PL",  # Pylint
  "PLC", # Pylint: Convention
  "PLE", # Pylint: Error
  "PLR", # Pylint: Refactor
  "PLW", # Pylint: Warning
  # "PT",  # flake8-pytest-style
  # "PTH",  # flake8-use-pathlib
  # "PYI",  # flake8-pyi
  "Q", # flake8-quotes
  # "RET",  # flake8-return
  # "RSE",  # flake8-raise
  "RUF", # Ruff-specific rules
  "S",   # flake8-bandit
  # "SIM",  # flake8-simplify
  # "SLF",  # flake8-self
  "T10", # flake8-debugger
  "T20", # flake8-print
  # "TCH",  # flake8-type-checking
  # "TD",  # flake8-todos
  "TID", # flake8-tidy-imports
  # "TRY",  # tryceratops
  "UP",  # pyupgrade
  "W",   # pycodestyle
  "YTT", # flake8-2020
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow use of date.today
  "DTZ011",
  # Remove flake8-errmsg since we consider they bloat the code and provide limited value
  "EM",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105",
  "S106",
  "S107",
  # Ignore warnings on subprocess.run / popen
  "S603",
  # Ignore complexity
  "C901",
  "PLR0911",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  # Ignore all these 'harmless' issues for now, there are too many to fix in one shot
  # and no test cases
  "T201",
  "S608",
  "S101",
  "N801",
  "N802",
  "N803",
  "N806",
  "N815",
  "N818",
  "A001",
  "FBT002",
  "PLR2004",
  "PLW0603",
  "PLW0602",
  "S324",
  "S605",
  "E501",    # Line is too long
  "S310",    # Audit URL open for permitted schemes. Allowing use of `file:` or custom schemes is often unexpected
  "ARG001",
  "ARG002",


]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["mb"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.pytest.ini_options]
minversion = "7.3"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.coverage.paths]
mb = ["mb"]
tests = ["tests"]

[tool.coverage.run]
source_pkgs = ["mb"]
branch = true
parallel = true
omit = ["mb/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[tool.pyright]
include = ["mb", "tests", "tasks.py"]
exclude = [".env/**", ".venv/**"]
extraPaths = ["mb"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
